--- a/.gitignore
+++ b/.gitignore
@@ -49,10 +49,11 @@ coverage.xml
 *.log
 *.pot
 
+staticfiles
+
 # Sphinx documentation
 docs/_build/
 
 
 javaseer.sublime-project
-
 javaseer.sublime-workspace
